--- a/app/views/staff/reports/forecasts.html.haml
+++ b/app/views/staff/reports/forecasts.html.haml
@@ -42,11 +42,18 @@
                   %td.govuk-table__cell= activity_presenter.roda_identifier
                   %td.govuk-table__cell{ colspan: 2 }
                     %table.govuk-table.forecasts
-                      - forecasts.map {|f| ForecastPresenter.new(f) }.each do |forecast|
+                      - forecasts.each do |forecast|
                         %tr.govuk-table__row
                           %td.govuk-table__cell--numeric
                             = forecast.financial_quarter_and_year
                           %td.govuk-table__cell--numeric
                             = forecast.value
+
+              %tr.govuk-table__row.totals
+                %td.govuk-table__cell{class: "govuk-!-width-one-third", scope: "col"} Total
+                %td.govuk-table__cell{class: "govuk-!-width-one-quarter", scope: "col"}
+                %td.govuk-table__cell
+                %td.govuk-table__cell.govuk-table__cell--numeric{class: "govuk-!-width-one-quarter", scope: "col"}
+                  = @total_forecast
 
 
