Extract forecasts grouped by activity to partial
We're going to re-use this in the successful upload
information rendered in the `forecast_uploads/update.html.haml`
view.

--- a/app/views/staff/reports/forecasts.html.haml
+++ b/app/views/staff/reports/forecasts.html.haml
@@ -24,36 +24,6 @@
           %h3.govuk-heading-m
             = t("page_content.tab_content.forecasts.per_activity_heading")
 
-          %table.govuk-table
-            %thead.govuk-table__head
-              %tr.govuk-table__row
-                %th.govuk-table__header{class: "govuk-!-width-one-quarter", scope: "col"} Activity
-                %th.govuk-table__header{class: "govuk-!-width-one-quarter", scope: "col"} RODA Identifier
-                %th.govuk-table__header.govuk-table__header--numeric{class: "govuk-!-width-one-quarter", scope: "col"} Financial Quarter
-                %th.govuk-table__header.govuk-table__header--numeric{class: "govuk-!-width-one-quarter", scope: "col"} Amount
-            %tbody.govuk-table__body
-
-              - @grouped_forecasts.each do |activity_id, forecasts|
-                - activity = @report_activities.find { |r| r.id == activity_id }
-                - activity_presenter = ActivityPresenter.new(activity)
-
-                %tr.govuk-table__row[activity]
-                  %td.govuk-table__cell= activity_presenter.title
-                  %td.govuk-table__cell= activity_presenter.roda_identifier
-                  %td.govuk-table__cell{ colspan: 2 }
-                    %table.govuk-table.forecasts
-                      - forecasts.each do |forecast|
-                        %tr.govuk-table__row
-                          %td.govuk-table__cell--numeric
-                            = forecast.financial_quarter_and_year
-                          %td.govuk-table__cell--numeric
-                            = forecast.value
-
-              %tr.govuk-table__row.totals
-                %td.govuk-table__cell{class: "govuk-!-width-one-third", scope: "col"} Total
-                %td.govuk-table__cell{class: "govuk-!-width-one-quarter", scope: "col"}
-                %td.govuk-table__cell
-                %td.govuk-table__cell.govuk-table__cell--numeric{class: "govuk-!-width-one-quarter", scope: "col"}
-                  = @total_forecast
+          = render partial: "shared/forecasts/forecasts_by_activity"
 
 
