--- a/app/views/staff/reports/forecasts.html.haml
+++ b/app/views/staff/reports/forecasts.html.haml
@@ -19,7 +19,7 @@
           = t("page_content.tab_content.forecasts.guidance_html")
 
           - if policy(@report_presenter).upload?
-            = link_to t("action.forecast.upload.link"), new_report_forecast_upload_path(@report_presenter), class: "govuk-button govuk-button--secondary govuk-!-margin-left-4"
+            = link_to t("action.forecast.upload.link"), new_report_forecast_upload_path(@report_presenter), class: "govuk-button govuk-button--secondary"
 
           %h3.govuk-heading-m
             = t("page_content.tab_content.forecasts.per_activity_heading")
