--- a/app/views/staff/reports/transactions.html.haml
+++ b/app/views/staff/reports/transactions.html.haml
@@ -10,7 +10,7 @@
         %h2.govuk-tabs__title
           Contents
 
-        = render partial: "staff/reports/tab_list", locals: { active_tab: "actuals" }
+        = render partial: "staff/reports/tab_list", locals: { active_tab: "transactions" }
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
