--- a/app/views/staff/transaction_uploads/update.html.haml
+++ b/app/views/staff/transaction_uploads/update.html.haml
@@ -2,14 +2,20 @@
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
-    .govuk-grid-column-two-thirds
-      %h1.govuk-heading-xl
-        = t("page_title.transaction.upload")
+    - if @success == false
+      .govuk-grid-column-two-thirds
+        %h1.govuk-heading-xl
+          = t("page_title.transaction.upload")
 
-  - unless @errors.empty?
-    .govuk-grid-row
+      .govuk-grid-row
+        .govuk-grid-column-full
+          = render partial: "error_table"
+
+          = render partial: "upload_form"
+    - else
       .govuk-grid-column-full
-        = render partial: "error_table"
+        %h1.govuk-heading-xl
+          = t("page_title.transaction.upload_success")
 
-  - unless @success
-    = render partial: "upload_form"
+        = render partial: "shared/transactions/transactions_by_activity"
+        = link_to t("importer.success.transaction.back_link"), report_actuals_path(@report_presenter), class: "govuk-button govuk-button"
