--- a/app/views/staff/reports/_tab_list.html.haml
+++ b/app/views/staff/reports/_tab_list.html.haml
@@ -7,6 +7,10 @@
     = link_to t("tabs.report.forecasts"),
       report_forecasts_path(@report),
       { class: "govuk-tabs__tab", role: "tab", aria: { controls: "financials", selected: false } }
+  %li{class: "govuk-tabs__list-item #{ "govuk-tabs__list-item--selected" if active_tab == "actuals" }"}
+    = link_to t("tabs.report.transactions"),
+      report_actuals_path(@report),
+      { class: "govuk-tabs__tab", role: "tab", aria: { controls: "financials", selected: false } }
   %li{class: "govuk-tabs__list-item #{ "govuk-tabs__list-item--selected" if active_tab == "variance" }"}
     = link_to t("tabs.report.variance"),
       report_variance_path(@report),
