Use the new home page for BEIS users
All 'home' links ad the sign in redirect lead to the home page.

This leaves delivery partners with a odd redirect from `/home` to their
organisation show page, this will be resolved in our next piece of work
where we use the home page for delivery partners as well as BEIS users.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,7 +36,7 @@
 
         - if authenticated?
           .govuk-header__content
-            %a.govuk-header__link.govuk-header__link--service-name{ href: organisation_path(current_user.organisation) }
+            %a.govuk-header__link.govuk-header__link--service-name{ href: home_path }
               = t('app.title')
 
             %button{type:'button', class:'govuk-header__menu-button govuk-js-header-toggle', aria: {label: 'Show or hide Top Level Navigation', controls: 'navigation'}}
