--- a/app/views/staff/shared/activities/tree_view/_table.html.haml
+++ b/app/views/staff/shared/activities/tree_view/_table.html.haml
@@ -16,7 +16,7 @@
                 %th{scope: "col", class: "govuk-table__header"}
                   = t("table.header.activity.identifier")
                 %th{scope: "col", class: "govuk-table__header"}
-                  = t("table.header.activity.level")
+                  = t("table.header.activity.programme_status")
                 %th{scope: "col", class: "govuk-table__header"}
 
             %tbody{class: "govuk-table__body"}
