--- a/app/views/staff/shared/activities/tree_view/_row.html.haml
+++ b/app/views/staff/shared/activities/tree_view/_row.html.haml
@@ -6,7 +6,7 @@
   %td{class: "govuk-table__cell"}
     = activity_presenter.roda_identifier
   %td{class: "govuk-table__cell"}
-    = activity_presenter.level
+    = activity_presenter.programme_status
   %td{class: "govuk-table__cell"}
     = a11y_action_link t("table.body.activity.view_activity"),
                        organisation_activity_path(activity_presenter.organisation_id, activity_presenter),
