Add 'Change History' tab to Activity view

--- a/app/views/staff/shared/activities/_tab_nav.html.haml
+++ b/app/views/staff/shared/activities/_tab_nav.html.haml
@@ -8,3 +8,4 @@
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "children", path: organisation_activity_children_path(@activity.organisation, @activity) }
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "comments", path: organisation_activity_comments_path(@activity.organisation, @activity) }
   = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "transfers", path: organisation_activity_transfers_path(@activity.organisation, @activity) }
+  = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "historical_events", path: organisation_activity_historical_events_path(@activity.organisation, @activity) }
