Add table of historical events to 'Change history' tab
Because changes to an activity usually affect several
attributes we include the HistoricalEvent#reference property
to group individual changes together with meaningful
context, such as "Update to Activity purpose" or "Import from
CSV".  Our table of 'Change history' would then group
historical events using this reference to present the report
the changes more clearly.

However, I realised that the "grouping by reference" is
currently too niave: if I edit the purpose of an activity
today and you've edited the purpose 2 weeks ago, then all 4
changes would be grouped under the common "Update to
Activity purpose" reference.

What we actually want is to have 2 groups of historical
events, one for your changes made 2 weeks ago and one for
mine, made today...

Maybe `HistoryRecorder` could add some kind of 'grouping
reference' to when it creates the `HistoricalEvent`s e.g
with a unix timestamp:

    HistoricalEvent.create(
      ...
      reference: "Update to Activity purpose (ref: 1625473974)"
      ...
    )

--- a/app/views/staff/activity_historical_events/show.html.haml
+++ b/app/views/staff/activity_historical_events/show.html.haml
@@ -17,3 +17,28 @@
 
           %p.govuk-body
             = t("page_content.tab_content.change_history.guidance")
+
+          %table.govuk-table.historical-events
+            %thead.govuk-table__head
+              %tr.govuk-body-s.govuk-table__row
+                %th.govuk-table__header{scope: "col"} Reference
+                %th.govuk-table__header{scope: "col"} Property
+                %th.govuk-table__header{scope: "col"} Previous value
+                %th.govuk-table__header{scope: "col"} New value
+                %th.govuk-table__header{scope: "col"} Who
+                %th.govuk-table__header{scope: "col"} When
+                %th.govuk-table__header{scope: "col"} Report
+
+            %tbody.govuk-table__body
+              - @historical_events.each do |event|
+
+                %tr.govuk-body-xs.govuk-table__row[event]
+                  %td.govuk-table__cell.reference= event.reference
+                  %td.govuk-table__cell.property= event.value_changed
+                  %td.govuk-table__cell.previous-value= event.previous_value
+                  %td.govuk-table__cell.new-value= event.new_value
+                  %td.govuk-table__cell.user= event.user.email
+                  %td.govuk-table__cell.timestamp= event.created_at.strftime("%d/%m/%C at %R")
+                  %td.govuk-table__cell.report
+                    = link_to(event.report.financial_quarter_and_year, report_path(event.report)) if event.report
+
