Report shows updated activities
The goal of the report activities tab is to show all users what new and
updated activities are in a report.

Building on the new method on Report `activities_updated` and
`new_activities` association, we can now do this.

Here we populate the existing table with updated activities only, changing
the table elements and caption to reflect this.

We also moved the upload section of the tab under a heading and
collected the guidance and upload button together under the heading to
visually break up the sections.

--- a/app/views/staff/activity_uploads/_activities_table.html.haml
+++ b/app/views/staff/activity_uploads/_activities_table.html.haml
@@ -1,11 +1,12 @@
-%table.govuk-table
-  %caption.govuk-table__caption= "List of activities #{action}"
+%table{ class: "govuk-table govuk-!-margin-bottom-9" }
+  %caption.govuk-table__caption.govuk-table__caption--m
+    = table_caption
   %thead.govuk-table__head
     %tr.govuk-table__row
       %th.govuk-table__header{scope: "col"} RODA Identifier
       %th.govuk-table__header{scope: "col"} Title
-      %th.govuk-table__header{scope: "col"} State
-      %th.govuk-table__header{scope: "col"} Link
+      %th.govuk-table__header{scope: "col"} Status
+      %th.govuk-table__header{scope: "col"} Action
   %tbody.govuk-table__body
     - activities.each do |activity|
       - activity_presenter = ActivityPresenter.new(activity)
@@ -14,5 +15,5 @@
         %td.govuk-table__cell= activity_presenter.title
         %td.govuk-table__cell= activity_presenter.programme_status
         %td.govuk-table__cell
-          = link_to "View", organisation_activity_path(activity.organisation, activity)
+          = link_to "View activity", organisation_activity_path(activity.organisation, activity)
 
