Report shows new and updated activities
Showing a table of new activities added in a report helps all users
quickly verify and gain confidence.

This commits reuses the existing view components and the new
`new_activities` association on report to do just that.

--- a/app/views/staff/reports/activities.html.haml
+++ b/app/views/staff/reports/activities.html.haml
@@ -28,4 +28,6 @@
             %p.govuk-body
               = link_to t("action.activity.upload.link"), new_report_activity_upload_path(@report_presenter), class: "govuk-button govuk-button--secondary"
 
+          = render partial: "staff/activity_uploads/activities_table", locals: { table_caption: t("table.caption.activity.new_activities_report"), activities: @new_activities }
+
           = render partial: "staff/activity_uploads/activities_table", locals: { table_caption: t("table.caption.activity.updated_activities_report"), activities: @updated_activities }
