--- a/app/views/staff/activities/index.html.haml
+++ b/app/views/staff/activities/index.html.haml
@@ -11,4 +11,4 @@
 
   .govuk-grid-row.activity-page
     .govuk-grid-column-full
-      = render partial: "staff/shared/activities/table", locals: { activities: @grouped_programmes }
+      = render partial: "staff/shared/activities/table", locals: { activities: @grouped_activities }
