--- a/app/views/staff/shared/activities/tree_view/_table.html.haml
+++ b/app/views/staff/shared/activities/tree_view/_table.html.haml
@@ -1,7 +1,7 @@
-- if grouped_programmes.any?
+- if activities.any?
   .govuk-grid-row
     .govuk-grid-column-full
-      - grouped_programmes.each do |fund, programmes|
+      - activities.each do |fund, programmes|
         - if programmes.any?
           %table{id: fund.id, class: "govuk-table", data: {module: "table-tree-view"}}
             %caption{class: "govuk-table__caption govuk-table__caption--m govuk-!-margin-top-4"}
@@ -20,9 +20,9 @@
                 %th{scope: "col", class: "govuk-table__header"}
 
             %tbody{class: "govuk-table__body"}
-              - programmes.each do |programme|
-                = render partial: "staff/shared/activities/tree_view/row", locals: { activity: programme, parent: fund, is_parent: programme.child_activities.any? }
-                - programme.child_activities.sort_by{|activity| activity.created_at }.each do |project|
-                  = render partial: "staff/shared/activities/tree_view/row", locals: { activity: project, parent: programme, is_parent: project.child_activities.any? }
-                  - project.child_activities.sort_by{|activity| activity.created_at }.each do |third_party_project|
+              - programmes.each do |programme, projects|
+                = render partial: "staff/shared/activities/tree_view/row", locals: { activity: programme, parent: fund, is_parent: projects.any? }
+                - projects.each do |project, third_party_projects|
+                  = render partial: "staff/shared/activities/tree_view/row", locals: { activity: project, parent: programme, is_parent: third_party_projects.any? }
+                  - third_party_projects.each do |third_party_project|
                     = render partial: "staff/shared/activities/tree_view/row", locals: { activity: third_party_project, parent: project, is_parent: false }
