--- a/app/views/staff/shared/activities/tree_view/_table_tabbed.html.haml
+++ b/app/views/staff/shared/activities/tree_view/_table_tabbed.html.haml
@@ -1,14 +1,14 @@
-- if grouped_programmes.any?
+- if grouped_activities.any?
   .govuk-grid-row
     .govuk-grid-column-full
       .govuk-tabs{ data: { module: "govuk-tabs" } }
         %h2.govuk-tabs__title
           Current activities
         %ul.govuk-tabs__list
-          - grouped_programmes.each do |fund, programmes|
+          - grouped_activities.each do |fund, _programmes|
             %li.govuk-tabs__list-item.govuk-tabs__list-item--selected
               = link_to fund.title, home_path(anchor: fund.title.parameterize), class: "govuk-tabs__tab"
-        - grouped_programmes.each do |fund, programmes|
+        - grouped_activities.each do |fund, programmes|
           - if programmes.any?
             .govuk-tabs__panel{ id: fund.title.parameterize }
               %table{id: fund.id, class: "govuk-table", data: {module: "table-tree-view"}}
@@ -25,11 +25,11 @@
                     %th{scope: "col", class: "govuk-table__header"}
 
                 %tbody{class: "govuk-table__body"}
-                  - programmes.each do |programme|
-                    = render partial: "staff/shared/activities/tree_view/row", locals: { activity: programme, parent: fund, is_parent: programme.child_activities.any? }
-                    - programme.child_activities.sort_by{|activity| activity.created_at }.each do |project|
-                      = render partial: "staff/shared/activities/tree_view/row", locals: { activity: project, parent: programme, is_parent: project.child_activities.any? }
-                      - project.child_activities.sort_by{|activity| activity.created_at }.each do |third_party_project|
+                  - programmes.each do |programme, projects|
+                    = render partial: "staff/shared/activities/tree_view/row", locals: { activity: programme, parent: fund, is_parent: projects.any? }
+                    - projects.each do |project, third_party_projects|
+                      = render partial: "staff/shared/activities/tree_view/row", locals: { activity: project, parent: programme, is_parent: third_party_projects.any? }
+                      - third_party_projects.each do |third_party_project|
                         = render partial: "staff/shared/activities/tree_view/row", locals: { activity: third_party_project, parent: project, is_parent: false }
 
               = link_to "View all activities", activities_path(organisation_id: current_user.organisation.id), class: "govuk-body govuk-link"
