Report actuals tab improvements
Here we attempt to improve the layout and content of the report >
actuals tab.

- Tab and Tab title are the same
- All content and UI relating to providing data is now grouped together
  and not shown when the report content cannot be changed
- The content and layout of the providing actuals data section has been
  improved with headings and call-outs
- The guidance links to the correct guidance
- The 'download template' link has been brought to the tab as this is
  more natural place than behind an 'upload' button.
- For the tab, the upload button is now primary, whilst we already have
  a primary button on the report itself, we are not a linear service and
  having more than on primary actions is a natural part of a complex
  interface like this.
- A section break has been added to the providing data section to
  visually separate it from the list of actuals data

Overall the aim to have the content and layout strike a balance between
being succinct and helpful. I also want the content to work for users
regardless of the report state, which this does well.

--- a/app/views/staff/reports/transactions.html.haml
+++ b/app/views/staff/reports/transactions.html.haml
@@ -14,16 +14,30 @@
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
-            = t("page_content.tab_content.transactions.heading")
+            = t("tabs.transactions.heading")
 
-          = t("page_content.tab_content.transactions.guidance_html")
+          %p.govuk-body
+            = t("tabs.transactions.copy")
 
           - if policy(@report_presenter).upload?
-            = link_to t("action.transaction.upload.link"), new_report_transaction_upload_path(@report_presenter), class: "govuk-button govuk-button--secondary"
+            %h3.govuk-heading-m
+              = t("tabs.transactions.providing.heading")
 
-          %h3.govuk-heading-m
-            = t("page_content.tab_content.transactions.per_activity_heading")
+            %p.govuk-body
+              = t("tabs.transactions.providing.copy")
+
+            %h3.govuk-heading-s
+              = t("tabs.transactions.upload.heading")
+
+            = t("tabs.transactions.upload.copy_html")
+
+            .govuk-inset-text
+              = t("tabs.transactions.upload.warning")
+
+            .govuk-button-group
+              = link_to t("page_content.transactions.button.download_template"), report_transaction_upload_path(@report_presenter, format: :csv), class: "govuk-button govuk-button--secondary"
+              = link_to t("page_content.transactions.button.upload"), new_report_transaction_upload_path(@report_presenter), class: "govuk-button govuk-button"
+
+            %hr.govuk-section-break.govuk-section-break--l.govuk-section-break--visible
 
           = render partial: "shared/transactions/transactions_by_activity"
-
-
