--- a/app/views/shared/transactions/_transactions_by_activity.html.haml
+++ b/app/views/shared/transactions/_transactions_by_activity.html.haml
@@ -1,4 +1,6 @@
 %table.govuk-table
+  %caption.govuk-table__caption.govuk-table__caption--m
+    = t("table.caption.transaction.actuals_in_report")
   %thead.govuk-table__head
     %tr.govuk-table__row
       %th.govuk-table__header{class: "govuk-!-width-one-third", scope: "col"} Activity
