Persist polymorphic 'trackable' association on HistoricalEvent
As we are adding a polymorphic association to an existing
class our migration also backfills existing records with the
"trackable" data they need.

--- a/app/views/staff/activity_historical_events/show.html.haml
+++ b/app/views/staff/activity_historical_events/show.html.haml
@@ -49,7 +49,7 @@
                   %tbody.govuk-table__body
                     - events.each do |event|
 
-                      %tr.govuk-body-s.govuk-table__row[event]
+                      %tr.govuk-body-s.govuk-table__row[event]{class: event.trackable_type.downcase}
                         %td.govuk-table__cell.property= event.value_changed
                         %td.govuk-table__cell.previous-value= event.previous_value
                         %td.govuk-table__cell.new-value= event.new_value
