Don't show visited state for exports links

--- a/app/views/staff/exports/index.html.haml
+++ b/app/views/staff/exports/index.html.haml
@@ -22,4 +22,4 @@
               %td.govuk-table__cell
                 = organisation.name
               %td.govuk-table__cell
-                = a11y_action_link("View exports", exports_organisation_path(organisation), "for #{organisation.name}")
+                = a11y_action_link("View exports", exports_organisation_path(organisation), "for #{organisation.name}", ["govuk-link--no-visited-state"])
