Add a plural version for Action columns

--- a/app/views/staff/exports/index.html.haml
+++ b/app/views/staff/exports/index.html.haml
@@ -14,7 +14,7 @@
             %th.govuk-table__header{scope: "col"}
               = t("table.header.organisation.name")
             %th.govuk-table__header{scope: "col"}
-              = t("table.header.default.action")
+              = t("table.header.default.actions")
 
         %tbody.govuk-table__body
           - @organisations.each do |organisation|
