--- a/app/views/staff/home/_delivery_partner_organisations_table.html.haml
+++ b/app/views/staff/home/_delivery_partner_organisations_table.html.haml
@@ -6,7 +6,7 @@
       %th.govuk-table__header{scope: "col"}
         = t("table.header.organisation.name")
       %th.govuk-table__header{scope: "col"}
-        = t("table.header.default.action")
+        = t("table.header.default.actions")
   %tbody.govuk-table__body
     - @delivery_partner_organisations.each do |delivery_partner_organisation|
       %tr.govuk-table__row
