--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -27,4 +27,6 @@
 
 = f.govuk_text_field :value, class: "govuk-input govuk-input--width-10"
 
+- if action_name == "edit"
+  = link_to t("default.button.delete"), activity_budget_path(@activity, @budget), method: "delete" , class: "govuk-button govuk-button--warning", "data-module": "govuk-button", role: "button", data: { confirm: "Are you sure you want to delete this budget?" }
 = f.govuk_submit t("default.button.submit")
