--- a/app/assets/stylesheets/partials/_forms.css.scss
+++ b/app/assets/stylesheets/partials/_forms.css.scss
@@ -22,3 +22,8 @@
 .js-enabled .js-hidden {
   @extend .govuk-visually-hidden;
 }
+
+.region-countries-wrapper {
+  margin-left: govuk-spacing(6);
+  margin-bottom: govuk-spacing(3);
+}
