--- a/app/views/staff/shared/activities/_activity.html.haml
+++ b/app/views/staff/shared/activities/_activity.html.haml
@@ -205,6 +205,15 @@
       - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :dates)
         = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:planned_start_date)}"), activity_step_path(activity_presenter, :dates), t("summary.label.activity.actual_end_date"))
 
+  .govuk-summary-list__row.benefitting_countries
+    %dt.govuk-summary-list__key
+      = t("summary.label.activity.benefitting_countries")
+    %dd.govuk-summary-list__value
+      = activity_presenter.benefitting_countries
+    %dd.govuk-summary-list__actions
+      - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :benefitting_countries)
+        = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:intended_beneficiaries)}"), activity_step_path(activity_presenter, :benefitting_countries), t("summary.label.activity.benefitting_countries"))
+
   - if activity_presenter.recipient_region?
     .govuk-summary-list__row.recipient_region
       %dt.govuk-summary-list__key
