Enhance selection for JavaScript users
In order to make selecting all the countries in a region easier, we change the region heading into a checkbox to toggle all the countries in that region when JavaScript is available.

Co-authored-by: pezholio <stuart@dxw.com>

--- a/app/assets/stylesheets/partials/_forms.css.scss
+++ b/app/assets/stylesheets/partials/_forms.css.scss
@@ -27,3 +27,17 @@
   margin-left: govuk-spacing(6);
   margin-bottom: govuk-spacing(3);
 }
+
+.region-checkbox-wrapper {
+  display: none;
+}
+
+.js-enabled {
+  .region-checkbox-wrapper {
+    display: block;
+  }
+
+  .region-heading {
+    display: none;
+  }
+}
