--- a/app/views/staff/exports/organisations/show.html.haml
+++ b/app/views/staff/exports/organisations/show.html.haml
@@ -16,3 +16,5 @@
             %th.govuk-table__header{scope: "col"}= t("table.export.organisation.actions")
         %tbody.govuk-table__body
           = render partial: "row", locals: { report: "All transactions", format: "CSV", download_url: transactions_exports_organisation_path(@organisation, format: "csv") }
+          - @xml_downloads.each do |download|
+            = render partial: "row", locals: { report: download.title, format: "XML", download_url: download.path }
